# hduino

./: .gitignore  CLAUDE.md  package.json  turbo.json
.claude/: settings.local.json
.github/workflows/: build-desktop.yml
Todos/: adding-blocks-guide.md  todo.md
apps/desktop/: OFFLINE_BUILD.md  package.json
apps/desktop/scripts/: download-arduino-cli.sh  package-arduino-data.sh  setup-arduino-data.sh
apps/desktop/src-tauri/: Cargo.toml  splash.html  tauri.conf.json
apps/desktop/src-tauri/binaries/: arduino-cli  arduino-cli-aarch64-apple-darwin-bin  arduino-cli-x86_64-apple-darwin-bin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/arduino-data/: bundle_timestamp.txt  bundled_cores.txt  inventory.yaml  package_index.json.sig
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: arduino.rs  files.rs  mod.rs  serial.rs
apps/web/: package.json
apps/web/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  export-detail.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
apps/web/.next/cache/: .previewinfo  .rscinfo
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/public/: splash.html
docs/: memo.md
(+368 files in other folders)
