[package]
name = "hduino"
version = "0.1.0"
description = "Arduino Block Programming"
authors = ["Hicham"]
edition = "2021"

[lib]
name = "hduino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.5"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "fs"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
